@@ -1,11 +1,16 @@
 /*
- * $Id: ChangeLog,v 1.445 2007-11-08 19:32:54 declan2005 Exp $
+ * $Id: ChangeLog,v 1.446 2007-11-11 17:42:05 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2007-11-11 11:42 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
+  * source/c_activex.c
+  * source/h_activex.prg
+    * Updated recent changes from FreeWin.
 
 2007-11-08 14:10 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
   * h_help.prg
